[gd_scene load_steps=10 format=2]

[ext_resource path="res://data/theme/default_ui_text.tres" type="Theme" id=1]
[ext_resource path="res://scripts/GUI/Trading.gd" type="Script" id=2]
[ext_resource path="res://data/styles/GUI_bg.tres" type="StyleBox" id=3]
[ext_resource path="res://scripts/GUI/InputConsumer.gd" type="Script" id=4]
[ext_resource path="res://scenes/GUI/DialogWindowBaseASCII.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/GUI/ItemList/MyItemList.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/GUI/ItemList/InventoryRowV2.tscn" type="PackedScene" id=7]
[ext_resource path="res://data/InventoryV2_btn_group.tres" type="ButtonGroup" id=8]
[ext_resource path="res://scenes/GUI/ButtonBase.tscn" type="PackedScene" id=9]

[node name="Trading" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 37.0
margin_right = -20.0
margin_bottom = -27.0

[node name="MyShip" parent="HBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 413.0
margin_bottom = 656.0
size_flags_horizontal = 3
size_flags_vertical = 3
title = "Player's Ship"

[node name="MyItemList" parent="HBoxContainer/MyShip" instance=ExtResource( 6 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 19.0
margin_top = 58.0
margin_right = -21.0
margin_bottom = -17.0
Row = ExtResource( 7 )
DragDropID = "InventoryV2"
SelectGroup = ExtResource( 8 )
CanDropOnSelf = true

[node name="CargoLabel" type="RichTextLabel" parent="HBoxContainer/MyShip"]
anchor_right = 1.0
margin_top = 14.0
margin_right = -30.0
margin_bottom = 46.0
bbcode_enabled = true
bbcode_text = "[right](127/212)[/right]"
text = "(127/212)"

[node name="Control" type="Control" parent="HBoxContainer"]
margin_left = 417.0
margin_right = 830.0
margin_bottom = 656.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_right = -25.0
margin_bottom = -165.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconContainer" type="Control" parent="HBoxContainer/Control/VBoxContainer"]
margin_right = 356.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="HBoxContainer/Control/VBoxContainer/IconContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_right = 64.0
margin_bottom = 128.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc" parent="HBoxContainer/Control/VBoxContainer/IconContainer" instance=ExtResource( 9 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -65.0
margin_right = 0.0
margin_bottom = 65.0
Text = "?"
ShortcutKey = "?"
AlwaysOnShortcut = false

[node name="base" parent="HBoxContainer/Control/VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 148.0
margin_right = 356.0
margin_bottom = 491.0
size_flags_horizontal = 3
size_flags_vertical = 3
title = "[center]Buy[/center]"
border_style = "â”€"

[node name="Info" type="VBoxContainer" parent="HBoxContainer/Control/VBoxContainer/base"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -178.0
margin_top = -104.5
margin_right = 178.0
margin_bottom = 142.5
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemName" type="RichTextLabel" parent="HBoxContainer/Control/VBoxContainer/base/Info"]
margin_right = 356.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "[center][color=lime]Jerg Battleship[/color][/center]"
text = "Jerg Battleship"

[node name="Price" type="RichTextLabel" parent="HBoxContainer/Control/VBoxContainer/base/Info"]
margin_top = 44.0
margin_right = 356.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "[center][color=red]5000 energy[/color][/center]"
text = "5000 energy"

[node name="Control" type="Control" parent="HBoxContainer/Control/VBoxContainer/base/Info"]
margin_top = 88.0
margin_right = 356.0
margin_bottom = 247.0
rect_min_size = Vector2( 0, 90 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buy" parent="HBoxContainer/Control/VBoxContainer/base/Info/Control" instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -152.0
margin_top = -90.0
margin_right = 152.0
margin_bottom = 0.0
rect_min_size = Vector2( 142, 90 )
Text = "< Buy"
ShortcutKey = "<"

[node name="Sell" parent="HBoxContainer/Control/VBoxContainer/base/Info/Control" instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -152.0
margin_top = -90.0
margin_right = 152.0
margin_bottom = 0.0
rect_min_size = Vector2( 142, 90 )
Text = "Sell >"
ShortcutKey = ">"

[node name="Control" type="Control" parent="HBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 21.0
margin_right = -22.0
margin_bottom = -134.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" parent="HBoxContainer/Control/Control" instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -152.0
margin_top = -1.0
margin_right = 152.0
margin_bottom = 89.0002
rect_min_size = Vector2( 142, 90 )
size_flags_horizontal = 3
Text = "[esc] cancel"
ShortcutEnum = 16777217
AlwaysOnShortcut = false

[node name="Close" parent="HBoxContainer/Control/Control" instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -152.0
margin_right = 152.0
margin_bottom = 90.0
rect_min_size = Vector2( 142, 90 )
size_flags_horizontal = 3
Text = "[esc]close"
ShortcutEnum = 16777217
AlwaysOnShortcut = false

[node name="OtherShip" parent="HBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 834.0
margin_right = 1248.0
margin_bottom = 656.0
size_flags_horizontal = 3
size_flags_vertical = 3
title = "A Human Scout"

[node name="MyItemList" parent="HBoxContainer/OtherShip" instance=ExtResource( 6 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 19.0
margin_top = 58.0
margin_right = -21.0
margin_bottom = -17.0
Row = ExtResource( 7 )
DragDropID = "InventoryV2"
SelectGroup = ExtResource( 8 )
CanDropOnSelf = true
